# bible50cpp

./: Bible1.h  CMakeLists.txt  books.h  generator.h  main.cpp  ru_books.h  ru_chapters.h
